Changelog
=========


2.0.2 (unreleased)
------------------

- Issue #1374 Pedenzenliste (PDF).
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1374/
  [jone]

- Optimize dossier details PDF export.
  Show reference number always, add / rename some columns in listings.
  Use landscape pages for tables to gain width.
  Issue #1347 Ueberarbeitung Dossier Details (PDF)
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1347/
  [jone]

- Added French translations.
  [ttschanz]

- Tasklisting PDF optimizations.
  Issue #1331 Anpassung am PDF-Aufgabenverzeichnis
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1331/
  [jone]

- Dossier details PDF: Change headings and display filing prefix, if set.
  Issue #1347 Ueberarbeitung Dossier Details (PDF)
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1347
  [jone]

- Cleanup: remove old plonegov.pdflatex stuff, all views are rewritten with ftw.pdfgenerator.
  [jone]

- Dossier details PDF: remplement with ftw.pdfgenerator.
  [jone]

- Dossier listing PDF: Update layout and date according to definitions in ticket.
  Issue #1173 Feedback aus Pilotphase: Vorlage "Dossierverzeichnis" ueberarbeiten
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1173
  [jone]

- Dossier listing PDF: reimplement with ftw.pdfgenerator.
  [jone]

- Task listing PDF: use containing_dossier.
  [jone]

- Task listing PDF: updated layout and columns.
  Issue #1331 Anpassung am PDF-Aufgabenverzeichnis
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1331/
  [jone]

- Reimplement task listing PDF with ftw.pdfgenerator.
  [jone]

- Dossier cover PDF: various changes and layout optimizations.
  Issue #1332 Deckblatt PDF: Label Anzeige auch wenn keine Ablage Nummer definiert
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1332/
  [jone]
